fixing spacing for netizen design comp

--- a/src/css/100Global/_structure.scss
+++ b/src/css/100Global/_structure.scss
@@ -113,6 +113,7 @@
 	}
 
 	.footer-contact {
+		h2 { padding-left: 36px }
 		ul {
 			list-style-type: none;
 		}
